--- a/src/loiterbot/tests/CMakeLists.txt
+++ b/src/loiterbot/tests/CMakeLists.txt
@@ -9,8 +9,8 @@ ament_add_gtest(velocity_calculator_test
         ../include/loiterbot/laser/laser_characteristics.h ../src/laser/laser_characteristics.cpp
         ../include/loiterbot/laser/laser_analysis.h ../src/laser/laser_analysis.cpp
         ../include/loiterbot/obstacle/nearest_sighting.h ../src/obstacle/nearest_sighting.cpp
-        ../src/velocity/velocity.h ../src/velocity/velocity.cpp
-        ../src/velocity/velocity_calculator.h ../src/velocity/velocity_calculator.cpp)
+        ../include/loiterbot/velocity/velocity.h ../src/velocity/velocity.cpp
+        ../include/loiterbot/velocity/velocity_calculator.h ../src/velocity/velocity_calculator.cpp)
 ament_add_gtest(state_handler_search_test
         loiterbot/statehandler/state_handler_search_test.cpp
         ../src/loiterbot/statehandler/state_handler_search.cpp ../src/loiterbot/statehandler/state_handler_search.h
@@ -18,8 +18,8 @@ ament_add_gtest(state_handler_search_test
         ../include/loiterbot/laser/laser_characteristics.h ../src/laser/laser_characteristics.cpp
         ../include/loiterbot/laser/laser_analysis.h ../src/laser/laser_analysis.cpp
         ../include/loiterbot/obstacle/nearest_sighting.h ../src/obstacle/nearest_sighting.cpp
-        ../src/velocity/velocity.h ../src/velocity/velocity.cpp
-        ../src/velocity/velocity_calculator.h ../src/velocity/velocity_calculator.cpp
+        ../include/loiterbot/velocity/velocity.h ../src/velocity/velocity.cpp
+        ../include/loiterbot/velocity/velocity_calculator.h ../src/velocity/velocity_calculator.cpp
         ../src/loiterbot/action.cpp ../src/loiterbot/action.h)
 ament_add_gtest(state_handler_near_test
         loiterbot/statehandler/state_handler_near_test.cpp
@@ -28,8 +28,8 @@ ament_add_gtest(state_handler_near_test
         ../include/loiterbot/laser/laser_characteristics.h ../src/laser/laser_characteristics.cpp
         ../include/loiterbot/laser/laser_analysis.h ../src/laser/laser_analysis.cpp
         ../include/loiterbot/obstacle/nearest_sighting.h ../src/obstacle/nearest_sighting.cpp
-        ../src/velocity/velocity.h ../src/velocity/velocity.cpp
-        ../src/velocity/velocity_calculator.h ../src/velocity/velocity_calculator.cpp
+        ../include/loiterbot/velocity/velocity.h ../src/velocity/velocity.cpp
+        ../include/loiterbot/velocity/velocity_calculator.h ../src/velocity/velocity_calculator.cpp
         ../src/loiterbot/action.cpp ../src/loiterbot/action.h)
 ament_add_gtest(state_handler_too_near_test
         loiterbot/statehandler/state_handler_too_near_test.cpp
@@ -38,8 +38,8 @@ ament_add_gtest(state_handler_too_near_test
         ../include/loiterbot/laser/laser_characteristics.h ../src/laser/laser_characteristics.cpp
         ../include/loiterbot/laser/laser_analysis.h ../src/laser/laser_analysis.cpp
         ../include/loiterbot/obstacle/nearest_sighting.h ../src/obstacle/nearest_sighting.cpp
-        ../src/velocity/velocity.h ../src/velocity/velocity.cpp
-        ../src/velocity/velocity_calculator.h ../src/velocity/velocity_calculator.cpp
+        ../include/loiterbot/velocity/velocity.h ../src/velocity/velocity.cpp
+        ../include/loiterbot/velocity/velocity_calculator.h ../src/velocity/velocity_calculator.cpp
         ../src/loiterbot/action.cpp ../src/loiterbot/action.h)
 
 ament_target_dependencies(laser_test ${dependencies})
