--- a/src/loiterbot/tests/CMakeLists.txt
+++ b/src/loiterbot/tests/CMakeLists.txt
@@ -42,8 +42,20 @@ ament_add_gtest(state_handler_too_near_test
         ../include/loiterbot/velocity/velocity_calculator.hpp ../src/velocity/velocity_calculator.cpp
         ../src/action.cpp ../include/loiterbot/action.hpp)
 
+ament_add_gtest(vff_unittest
+        velocity/vff/vff_unittest.cpp
+        ../include/loiterbot/velocity/vff/vff.hpp
+        ../src/velocity/vff/vff.cpp)
+
+ament_add_gtest(vector_unittest
+        velocity/vff/vector_unittest.cpp
+        ../include/loiterbot/velocity/vff/vector.hpp
+        ../src/velocity/vff/vector.cpp)
+
 ament_target_dependencies(laser_test ${dependencies})
 ament_target_dependencies(velocity_calculator_test ${dependencies})
 ament_target_dependencies(state_handler_search_test ${dependencies})
 ament_target_dependencies(state_handler_near_test ${dependencies})
 ament_target_dependencies(state_handler_too_near_test ${dependencies})
+ament_target_dependencies(vff_unittest ${dependencies})
+ament_target_dependencies(vector_unittest ${dependencies})
