design improvements to vff

--- a/src/loiterbot/tests/CMakeLists.txt
+++ b/src/loiterbot/tests/CMakeLists.txt
@@ -44,13 +44,19 @@ ament_add_gtest(state_handler_too_near_test
 
 ament_add_gtest(vff_unittest
         velocity/vff/vff_unittest.cpp
-        ../include/loiterbot/velocity/vff/vff.hpp
-        ../src/velocity/vff/vff.cpp)
+        ../include/loiterbot/velocity/vff/vff_vector_calculator.hpp
+        ../src/velocity/vff/vff_vector_calculator.cpp
+        ../include/loiterbot/velocity/vff/vector_by_standard_position.hpp
+        ../src/velocity/vff/vector_by_standard_position.cpp)
 
 ament_add_gtest(vector_unittest
-        velocity/vff/vector_unittest.cpp
-        ../include/loiterbot/velocity/vff/vector.hpp
-        ../src/velocity/vff/vector.cpp)
+        velocity/vff/vector_converter_unittest.cpp
+        ../include/loiterbot/velocity/vff/vector_converter.hpp
+        ../src/velocity/vff/vector_converter.cpp
+        ../include/loiterbot/velocity/vff/vector_by_magnitude_angle.hpp
+        ../src/velocity/vff/vector_by_magnitude_angle.cpp
+        ../include/loiterbot/velocity/vff/vector_by_standard_position.hpp
+        ../src/velocity/vff/vector_by_standard_position.cpp)
 
 ament_target_dependencies(laser_test ${dependencies})
 ament_target_dependencies(velocity_calculator_test ${dependencies})
