--- a/src/loiterbot/tests/CMakeLists.txt
+++ b/src/loiterbot/tests/CMakeLists.txt
@@ -1,11 +1,13 @@
 ament_add_gtest(laser_test
         laser/laser_test.cpp
+        test_constants.hpp
         ../include/loiterbot/laser/laser_analyzer.hpp ../src/laser/laser_analyzer.cpp
         ../include/loiterbot/laser/laser_characteristics.hpp ../src/laser/laser_characteristics.cpp
         ../include/loiterbot/laser/laser_analysis.hpp ../src/laser/laser_analysis.cpp
         ../include/loiterbot/obstacle/nearest_sighting.hpp ../src/obstacle/nearest_sighting.cpp)
 ament_add_gtest(velocity_calculator_test
         velocity/velocity_calculator_test.cpp
+        test_constants.hpp
         ../include/loiterbot/laser/laser_characteristics.hpp ../src/laser/laser_characteristics.cpp
         ../include/loiterbot/laser/laser_analysis.hpp ../src/laser/laser_analysis.cpp
         ../include/loiterbot/obstacle/nearest_sighting.hpp ../src/obstacle/nearest_sighting.cpp
@@ -13,6 +15,7 @@ ament_add_gtest(velocity_calculator_test
         ../include/loiterbot/velocity/velocity_calculator.hpp ../src/velocity/velocity_calculator.cpp)
 ament_add_gtest(state_handler_search_test
         statehandler/state_handler_search_test.cpp
+        test_constants.hpp
         ../src/fsm/statehandler/state_handler_search.cpp ../include/loiterbot/fsm/statehandler/state_handler_search.hpp
         ../src/history.cpp ../include/loiterbot/history.hpp
         ../include/loiterbot/laser/laser_characteristics.hpp ../src/laser/laser_characteristics.cpp
@@ -23,6 +26,7 @@ ament_add_gtest(state_handler_search_test
         ../src/action.cpp ../include/loiterbot/action.hpp)
 ament_add_gtest(state_handler_near_test
         statehandler/state_handler_near_test.cpp
+        test_constants.hpp
         ../src/fsm/statehandler/state_handler_near.cpp ../include/loiterbot/fsm/statehandler/state_handler_near.hpp
         ../src/history.cpp ../include/loiterbot/history.hpp
         ../include/loiterbot/laser/laser_characteristics.hpp ../src/laser/laser_characteristics.cpp
@@ -33,6 +37,7 @@ ament_add_gtest(state_handler_near_test
         ../src/action.cpp ../include/loiterbot/action.hpp)
 ament_add_gtest(state_handler_too_near_test
         statehandler/state_handler_too_near_test.cpp
+        test_constants.hpp
         ../src/fsm/statehandler/state_handler_too_near.cpp ../include/loiterbot/fsm/statehandler/state_handler_too_near.hpp
         ../src/history.cpp ../include/loiterbot/history.hpp
         ../include/loiterbot/laser/laser_characteristics.hpp ../src/laser/laser_characteristics.cpp
@@ -44,6 +49,7 @@ ament_add_gtest(state_handler_too_near_test
 
 ament_add_gtest(vector_force_field_calculator_test
         velocity/vff/vector_force_field_calculator_test.cpp
+        test_constants.hpp
         ../include/loiterbot/velocity/vff/vector_force_field_calculator.hpp
         ../src/velocity/vff/vector_force_field_calculator.cpp
         ../include/loiterbot/vector/vector_by_standard_position.hpp
@@ -51,6 +57,7 @@ ament_add_gtest(vector_force_field_calculator_test
 
 ament_add_gtest(vector_converter_test
         velocity/vff/vector_converter_test.cpp
+        test_constants.hpp
         ../include/loiterbot/vector/vector_converter.hpp
         ../src/vector/vector_converter.cpp
         ../include/loiterbot/vector/vector_by_magnitude_angle.hpp
