--- a/src/loiterbot/tests/CMakeLists.txt
+++ b/src/loiterbot/tests/CMakeLists.txt
@@ -11,6 +11,21 @@ ament_add_gtest(velocity_calculator_test
         ../include/loiterbot/laser/laser_analysis.hpp ../src/laser/laser_analysis.cpp
         ../include/loiterbot/velocity/velocity.hpp ../src/velocity/velocity.cpp
         ../include/loiterbot/velocity/velocity_calculator.hpp ../src/velocity/velocity_calculator.cpp)
+
+ament_add_gtest(state_handler_just_go_test
+        statehandler/state_handler_just_go_test.cpp
+        test_constants.hpp
+        ../src/fsm/statehandler/state_handler_just_go.cpp ../include/loiterbot/fsm/statehandler/state_handler_just_go.hpp
+        ../src/history.cpp ../include/loiterbot/history.hpp
+        ../include/loiterbot/laser/laser_characteristics.hpp ../src/laser/laser_characteristics.cpp
+        ../include/loiterbot/laser/laser_analysis.hpp ../src/laser/laser_analysis.cpp
+        ../include/loiterbot/velocity/velocity.hpp ../src/velocity/velocity.cpp
+        ../include/loiterbot/velocity/velocity_calculator.hpp ../src/velocity/velocity_calculator.cpp
+        ../include/loiterbot/velocity/vff/vector_force_field_calculator.hpp ../src/velocity/vff/vector_force_field_calculator.cpp
+        ../include/loiterbot/vector/vector_converter.hpp ../src/vector/vector_converter.cpp
+        ../include/loiterbot/vector/vector_by_magnitude_angle.hpp ../src/vector/vector_by_magnitude_angle.cpp
+        ../include/loiterbot/vector/vector_by_standard_position.hpp ../src/vector/vector_by_standard_position.cpp
+        ../src/action.cpp ../include/loiterbot/action.hpp)
 ament_add_gtest(state_handler_search_test
         statehandler/state_handler_search_test.cpp
         test_constants.hpp
