--- a/src/loiterbot/tests/CMakeLists.txt
+++ b/src/loiterbot/tests/CMakeLists.txt
@@ -12,10 +12,10 @@ ament_add_gtest(velocity_calculator_test
         ../include/loiterbot/velocity/velocity.hpp ../src/velocity/velocity.cpp
         ../include/loiterbot/velocity/velocity_calculator.hpp ../src/velocity/velocity_calculator.cpp)
 
-ament_add_gtest(state_handler_just_go_test
-        statehandler/state_handler_just_go_test.cpp
+ament_add_gtest(state_handler_go_test
+        statehandler/state_handler_go_test.cpp
         test_constants.hpp
-        ../src/fsm/statehandler/state_handler_just_go.cpp ../include/loiterbot/fsm/statehandler/state_handler_just_go.hpp
+        ../src/fsm/statehandler/state_handler_go.cpp ../include/loiterbot/fsm/statehandler/state_handler_go.hpp
         ../src/history.cpp ../include/loiterbot/history.hpp
         ../include/loiterbot/laser/laser_characteristics.hpp ../src/laser/laser_characteristics.cpp
         ../include/loiterbot/laser/laser_analysis.hpp ../src/laser/laser_analysis.cpp
@@ -57,6 +57,7 @@ ament_add_gtest(vector_converter_test
 
 ament_target_dependencies(laser_test ${dependencies})
 ament_target_dependencies(velocity_calculator_test ${dependencies})
+ament_target_dependencies(state_handler_go_test ${dependencies})
 ament_target_dependencies(state_handler_too_near_test ${dependencies})
 ament_target_dependencies(vector_force_field_calculator_test ${dependencies})
 ament_target_dependencies(vector_converter_test ${dependencies})
